--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="container">
     <h1>🎁 Sugestões de Presentes para Lorena 🎂</h1>
     <p style="text-align: center;">
-      Estamos muito felizes em comemorar mais o primeiro aninho da nossa pequena 💖<br>
+      Estamos muito felizes em comemorar o primeiro aninho da nossa pequena 💖<br>
       Se você quiser nos presentear, aqui vão algumas sugestões que ela vai amar:
     </p>
 
