--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       padding: 30px;
       border-radius: 20px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      text-align: center;
     }
     h1, h2 {
       text-align: center;
