--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Presentes para Lorena 🎁</title>
   <style>
     body {
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: sans-serif;
       background-color: #fff0f5;
       color: #633a55;
       margin: 0;
